Update name field in YAML file

--- a/collections/transforms/9U4dM54x2Ie9f5mTO5IUG_another_one.yaml
+++ b/collections/transforms/9U4dM54x2Ie9f5mTO5IUG_another_one.yaml
@@ -3,7 +3,7 @@ created_at: '2025-12-17T18:45:52.827395Z'
 creator_id: nickfitz.582@gmail.com
 description: null
 entity_id: 9U4dM54x2Ie9f5mTO5IUG
-name: Another one
+name: Another oneeee
 owner_email: null
 owner_user_id: nickfitz.582@gmail.com
 source:
